--- a/public/markdown/workExperience/0.md
+++ b/public/markdown/workExperience/0.md
@@ -1,8 +1,5 @@
-#### Foo team
-  - 디자인 시스템 유지보수
-    - foo Component 구현
-
-#### Bar Team
-  - Chrome Extension 개발
-    - **엄선된 원두**를 커피 전문기업의 기술로 로스팅한 **깊고 풍부한 맛**의 커피
-    - **라떼 크림**을 더하여 입안 가득 채우는 우유의 풍미와 부드러운 달콤함
+#### 고비스 프랜차이즈
+ - 고비스 프랜차이즈로 불리는 점주와 본사 간의 소통을 관리하는 사이트를 관리하는 업무를 담당하였습니다.
+- 기술스택은 React, TypeScript, bootstrap, Figma 등을 이용하였습니다.
+- 코드 형상관리로는 github를 이용하였습니다.
+- 대시보드 , 건의, 문의, 뉴스레터페이지 작업 진행 시, 사업팀과 점주분들의 의견을 반영하고자 주기적으로 반응을 살피고  수정하였습니다. 
