--- a/public/markdown/workExperience/1.md
+++ b/public/markdown/workExperience/1.md
@@ -1,8 +1,6 @@
-#### Foo team
-  - 디자인 시스템 유지보수
-    - foo Component 구현
-
-#### Bar Team
-  - Chrome Extension 개발
-    - **엄선된 원두**를 커피 전문기업의 기술로 로스팅한 **깊고 풍부한 맛**의 커피
-    - **라떼 크림**을 더하여 입안 가득 채우는 우유의 풍미와 부드러운 달콤함
+### NC soft의 프로모션과 업데이트 업무
+- NCsoft의 사업, 디자이너, 기획파트와 협업하여 프로모션 15건, 업데이트 8건(PC, 모바일 포함)을 작업하였습니다.
+- 사내 스터디를 2개(자료구조, 코딩 인문학 도서 읽기) 진행하고 있습니다.
+- 기술 스택은 프론트엔드 프레임워크로 vue.js를 css 방면에선 sass를 사용하고 트랜지션/애니매이션 효과를 위해 gsap 등을 사용하여 작업하였습니다.
+- 코드 형상관리로는 github를 이용하였으며 CI/CD는 jenkins와 spinnaker로 작업하였습니다.
+- 디자인 작업과 퍼블리싱 작업을 포함한 FE파트에서 능력을 발휘할 수 있도록 작업하고 있습니다.
